src/objects/Dynamic_Content__c.object
<CustomObject>
    <description>This object have the ability to change the dynamic content on the volunteer portal in declarative manner.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whenever the Dynamic Content content is created newly, this flag would be marked as Active by default.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Overview__c</fullName>
        <description>It store the application details.</description>
        <label>Application Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will look up to chapter records in the account object</description>
        <label>Chapter Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Accounts related to Dynamic Content need to be a chapter name</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dynamic Contents</relationshipLabel>
        <relationshipName>Dynamic_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <description>It holds the chapter details</description>
        <label>Chapter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Quote__c</fullName>
        <description>It holds the Feature Quote for Active volunteer landing page</description>
        <label>Feature Quote</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Featured_Image__c</fullName>
        <description>It holds the  featured image for Active Volunteer Landing Page</description>
        <inlineHelpText>Optimized image size width: 1140px by height: 450px (height can vary)</inlineHelpText>
        <label>Featured Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Image_1__c</fullName>
        <description>It holds the Heading Highlight Image 1 for Active volunteer landing page</description>
        <inlineHelpText>Optimized image size- width: 342px by height: 314px</inlineHelpText>
        <label>Heading Image 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Image_2__c</fullName>
        <description>It holds the Heading Highlight Image 2 for Active volunteer landing page</description>
        <inlineHelpText>Optimized image size- width: 342px by height: 314px</inlineHelpText>
        <label>Heading Image 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Image_3__c</fullName>
        <description>It holds the Heading Highlight Image 3 for Active volunteer landing page</description>
        <inlineHelpText>Optimized image size- width: 342px by height: 314px</inlineHelpText>
        <label>Heading Image 3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Text_1__c</fullName>
        <description>It holds the Heading Highlight Text 1 for Active volunteer landing page</description>
        <label>Heading Text 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Text_2__c</fullName>
        <description>It holds the Heading Highlight Text 2 for Active volunteer landing page</description>
        <label>Heading Text 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Text_3__c</fullName>
        <description>It holds the Heading Highlight Text 3 for Active volunteer landing page</description>
        <label>Heading Text 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Title_1__c</fullName>
        <description>It holds the Heading Highlight Title1 for Active volunteer landing page</description>
        <label>Heading Title 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Title_2__c</fullName>
        <description>It holds the Heading Highlight Title 2 for Active volunteer landing page</description>
        <label>Heading Title 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heading_Highlight_Title_3__c</fullName>
        <description>It holds the Heading Highlight Title 3 for Active volunteer landing page</description>
        <label>Heading Title 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heading_Text__c</fullName>
        <description>It holds the heading text for Active Volunteer Landing Page</description>
        <label>Heading Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Heading_Title__c</fullName>
        <description>It holds the Heading Title for Active volunteer landing page</description>
        <label>Heading Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_do_I_Become_a_Volunteer__c</fullName>
        <description>It holds the text for How do I Become a Volunteer</description>
        <label>How do I Become a Volunteer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interview_Additional_Info__c</fullName>
        <description>It holds the text for Interview Additional Info for prospective volunteer</description>
        <label>Interview Additional Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Orientation_Add_l_Info__c</fullName>
        <description>It holds the details for Orientation Additional Info for prospective volunteer</description>
        <label>Orientation Additional Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sign_Up_Page__c</fullName>
        <description>This field is not chapter dependent and should be only updated by the National staff. The content in this field would be displayed on the Community Sign Up page.</description>
        <label>Sign Up Page</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Training_Additional_Info__c</fullName>
        <description>It Holds the details of Training Additional Info</description>
        <label>Training Additional Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Volunteer_Process__c</fullName>
        <description>it holds the details about the volunteer process</description>
        <label>Volunteer Process</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WelcomePage__c</fullName>
        <description>This Field is used to store the content of welcome page.</description>
        <label>WelcomePage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Welcome_Message__c</fullName>
        <description>It holds the Welcome Message for Active Volunteer Landing Page</description>
        <label>Welcome Message</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Welcome_Text__c</fullName>
        <description>It Holds the welcome Text for prospective volunteer</description>
        <label>Welcome Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Why_Need_Background_Check__c</fullName>
        <description>It will hold the verbiage for Background check.</description>
        <label>Why Need Background Check</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <label>Dynamic Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chapter_Name__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Dynamic Content ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Contents</pluralLabel>
    <recordTypes>
        <fullName>Chapter_Active</fullName>
        <active>true</active>
        <description>It will associated with Active Volunteer page layout</description>
        <label>Chapter Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chapter_Prospective</fullName>
        <active>true</active>
        <description>It will associated with Prospective Volunteer page layout</description>
        <label>Chapter Prospective</label>
    </recordTypes>
    <recordTypes>
        <fullName>National</fullName>
        <active>true</active>
        <description>It will associated with National page layout</description>
        <label>National</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>